# kmeans-from-scratch

./: README.md  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml
kmeans_lib/: __init__.py  core.py  distances.py  initialization.py
